Add item vector change to allow update flyout on new item add/change/remove

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
@@ -28,7 +28,8 @@
                        HeaderButtonStyle="{StaticResource MenuHeaderButtonStyle}"
                        Orientation="{Binding Orientation.Value, Mode=TwoWay}">
 
-            <controls:MenuItem controls:Menu.InputGestureText="Alt+F"
+            <controls:MenuItem Name="FileMenu"
+                               controls:Menu.InputGestureText="Alt+F"
                                Header="File">
                 <MenuFlyoutSubItem Text="New">
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+Shift+N"
