DropShadow support for ImageEx and RoundImageEx Expose GetAlphaMask for both ImageEx and RoundImageEx Modify UpdateShadowMask method to support ImageEx and RoundImageEx

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DropShadowPanel/DropShadowPanelPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DropShadowPanel/DropShadowPanelPage.xaml
@@ -117,8 +117,22 @@
                                               OffsetY="{Binding OffsetY.Value, Mode=OneWay}"
                                               ShadowOpacity="{Binding Opacity.Value, Mode=OneWay}"
                                               Color="Black">
-                        <Image Source="Trex.png"
-                               Stretch="Uniform" />
+                        <controls:ImageEx Source="/SamplePages/DropShadowPanel/Trex.png"
+                                          Stretch="Uniform" />
+
+                    </controls:DropShadowPanel>
+
+                    <controls:DropShadowPanel HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"
+                                              BlurRadius="{Binding BlurRadius.Value, Mode=OneWay}"
+                                              OffsetX="{Binding OffsetX.Value, Mode=OneWay}"
+                                              OffsetY="{Binding OffsetY.Value, Mode=OneWay}"
+                                              ShadowOpacity="{Binding Opacity.Value, Mode=OneWay}"
+                                              Color="Black">
+                        <controls:RoundImageEx CornerRadius="999"
+                                               Source="/SamplePages/DropShadowPanel/Trex.png"
+                                               Stretch="Uniform" />
+
                     </controls:DropShadowPanel>
                 </StackPanel>
             </StackPanel>
