--- a/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/BladeView/BladeView.xaml
@@ -103,9 +103,21 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:BladeItem">
-                    <Grid x:Name="BladeItemGrid"
-                          BorderBrush="{TemplateBinding BorderBrush}"
+                    <Grid BorderBrush="{TemplateBinding BorderBrush}"
                           BorderThickness="{TemplateBinding BorderThickness}">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="ExpandedStates">
+                                <VisualState x:Name="Expanded"/>
+                                <VisualState x:Name="Collapsed">
+                                    <VisualState.Setters>
+                                        <Setter Target="TitleBar.Visibility" Value="Collapsed" />
+                                        <Setter Target="ContentPresenter.Visibility" Value="Collapsed" />
+                                        <Setter Target="EnlargeButton.Content" Value="&#xE1D9;"/>
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>                        
+                      
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="*" />
@@ -119,7 +131,8 @@
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock Margin="4,0,0,0"
+                            <TextBlock x:Name="TitleBar"
+                                       Margin="4,0,0,0"
                                        HorizontalAlignment="Left"
                                        VerticalAlignment="Center"
                                        Foreground="{TemplateBinding TitleBarForeground}"
@@ -129,7 +142,7 @@
                                     TabIndex="0"
                                     HorizontalAlignment="Right"
                                     Background="{TemplateBinding CloseButtonBackground}"
-                                    Content="&#xE1D9;"
+                                    Content="&#xE73F;"
                                     FontFamily="Segoe MDL2 Assets"
                                     Foreground="{TemplateBinding CloseButtonForeground}" />
                             <Button Name="CloseButton"
