--- a/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml
@@ -6,10 +6,9 @@
         <Setter Property="HamburgerMenuTemplate">
             <Setter.Value>
                 <DataTemplate>
-                    <FontIcon
-                            FontFamily="Segoe MDL2 Assets"
-                            FontSize="16"
-                            Glyph="&#xE700;" />
+                    <FontIcon FontFamily="Segoe MDL2 Assets"
+                              FontSize="16"
+                              Glyph="&#xE700;" />
                 </DataTemplate>
             </Setter.Value>
         </Setter>
@@ -18,61 +17,58 @@
             <Setter.Value>
                 <ControlTemplate TargetType="local:HamburgerMenu">
                     <Grid>
-                        <SplitView
-                                x:Name="MainSplitView"
-                                CompactPaneLength="{TemplateBinding CompactPaneLength}"
-                                DisplayMode="{TemplateBinding DisplayMode}"
-                                IsPaneOpen="{Binding IsPaneOpen, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                IsTabStop="False"
-                                OpenPaneLength="{TemplateBinding OpenPaneLength}"
-                                PaneBackground="{TemplateBinding PaneBackground}"
-                                PanePlacement="{TemplateBinding PanePlacement}">
+                        <SplitView x:Name="MainSplitView"
+                                   CompactPaneLength="{TemplateBinding CompactPaneLength}"
+                                   DisplayMode="{TemplateBinding DisplayMode}"
+                                   IsPaneOpen="{Binding IsPaneOpen, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                   IsTabStop="False"
+                                   OpenPaneLength="{TemplateBinding OpenPaneLength}"
+                                   PaneBackground="{TemplateBinding PaneBackground}"
+                                   PanePlacement="{TemplateBinding PanePlacement}">
                             <SplitView.Pane>
-                                <Grid x:Name="PaneGrid" FlowDirection="LeftToRight">
+                                <Grid x:Name="PaneGrid" 
+                                      FlowDirection="LeftToRight">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="*" />
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
-                                    <Grid
-                                            Grid.Row="0"
-                                            Height="{TemplateBinding HamburgerHeight}"
-                                            Margin="0,0,0,8" />
+                                    <Grid Grid.Row="0"
+                                          Height="{TemplateBinding HamburgerHeight}"
+                                          Margin="0,0,0,8" />
 
-                                    <ListView
-                                            x:Name="ButtonsListView"
-                                            Grid.Row="1"
-                                            Width="{TemplateBinding OpenPaneLength}"
-                                            IsItemClickEnabled="True"
-                                            ItemTemplate="{TemplateBinding ItemTemplate}"
-                                            ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
-                                            ItemsSource="{TemplateBinding ItemsSource}"
-                                            ScrollViewer.VerticalScrollBarVisibility="Auto"
-                                            SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                            SelectedItem="{Binding SelectedItem, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                            SelectionMode="None"
-                                            TabIndex="1">
+                                    <ListView x:Name="ButtonsListView"
+                                              Grid.Row="1"
+                                              Width="{TemplateBinding OpenPaneLength}"
+                                              IsItemClickEnabled="True"
+                                              ItemTemplate="{TemplateBinding ItemTemplate}"
+                                              ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                              ItemsSource="{TemplateBinding ItemsSource}"
+                                              ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                              SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                              SelectedItem="{Binding SelectedItem, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                              SelectionMode="None"
+                                              TabIndex="1">
                                         <ListView.ItemContainerStyle>
                                             <Style TargetType="ListViewItem">
                                                 <Setter Property="Padding" Value="0" />
                                             </Style>
                                         </ListView.ItemContainerStyle>
                                     </ListView>
-                                    <ListView
-                                            x:Name="OptionsListView"
-                                            Grid.Row="2"
-                                            Width="{TemplateBinding OpenPaneLength}"
-                                            IsItemClickEnabled="True"
-                                            Margin="0,20,0,8"
-                                            VerticalAlignment="Bottom"
-                                            ItemTemplate="{TemplateBinding OptionsItemTemplate}"
-                                            ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
-                                            ItemsSource="{TemplateBinding OptionsItemsSource}"
-                                            ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                                            SelectedIndex="{Binding SelectedOptionsIndex, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                            SelectedItem="{Binding SelectedOptionsItem, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                            SelectionMode="None"
-                                            TabIndex="2">
+                                    <ListView x:Name="OptionsListView"
+                                              Grid.Row="2"
+                                              Width="{TemplateBinding OpenPaneLength}"
+                                              IsItemClickEnabled="True"
+                                              Margin="0,20,0,8"
+                                              VerticalAlignment="Bottom"
+                                              ItemTemplate="{TemplateBinding OptionsItemTemplate}"
+                                              ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                              ItemsSource="{TemplateBinding OptionsItemsSource}"
+                                              ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                                              SelectedIndex="{Binding SelectedOptionsIndex, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                              SelectedItem="{Binding SelectedOptionsItem, Mode=TwoWay, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                              SelectionMode="None"
+                                              TabIndex="2">
                                         <ListView.ItemContainerStyle>
                                             <Style TargetType="ListViewItem">
                                                 <Setter Property="Padding" Value="0" />
@@ -81,12 +77,11 @@
                                     </ListView>
                                 </Grid>
                             </SplitView.Pane>
-                            <ContentPresenter
-                                    x:Name="ContentPart"
-                                    Content="{TemplateBinding Content}" />
+                            <ContentPresenter x:Name="ContentPart"
+                                              AutomationProperties.Name="Content"
+                                              Content="{TemplateBinding Content}" />
                         </SplitView>
-                        <Button
-                                x:Name="HamburgerButton"
+                        <Button x:Name="HamburgerButton"
                                 Width="{TemplateBinding HamburgerWidth}"
                                 Height="{TemplateBinding HamburgerHeight}"
                                 Margin="0,8"
@@ -96,10 +91,9 @@
                                 BorderThickness="0"
                                 TabIndex="0"
                                 Visibility="{TemplateBinding HamburgerVisibility}">
-                            <ContentControl
-                                    ContentTemplate="{TemplateBinding HamburgerMenuTemplate}"
-                                    Foreground="{TemplateBinding PaneForeground}"
-                                    IsTabStop="False" />
+                            <ContentControl ContentTemplate="{TemplateBinding HamburgerMenuTemplate}"
+                                            Foreground="{TemplateBinding PaneForeground}"
+                                            IsTabStop="False" />
                         </Button>
                     </Grid>
                 </ControlTemplate>
