--- a/Microsoft.Toolkit.Uwp.UI.Controls/OrbitView/OrbitView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/OrbitView/OrbitView.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls">
 
-    <Style TargetType="local:SpaceView" >
+    <Style TargetType="local:OrbitView" >
         <Setter Property="IsFocusEngagementEnabled" Value="True"></Setter>
         <Setter Property="UseSystemFocusVisuals" Value="True"></Setter>
         <Setter Property="AnchorColor" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"></Setter>
@@ -12,13 +12,13 @@
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
-                    <local:SpaceViewPanel />
+                    <local:OrbitViewPanel />
                 </ItemsPanelTemplate>
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="local:SpaceView">
+                <ControlTemplate TargetType="local:OrbitView">
                     <Grid Background="{TemplateBinding Background}">
                         <Grid x:Name="OrbitGrid"></Grid>
                         <Canvas x:Name="AnchorCanvas"></Canvas>
