--- a/Microsoft.Toolkit.Uwp.UI.Controls/OrbitView/OrbitView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/OrbitView/OrbitView.xaml
@@ -30,4 +30,67 @@
         </Setter>
     </Style>
 
+    <Style TargetType="local:OrbitViewItemControl" >
+        <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
+        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local:OrbitViewItemControl">
+                    <Grid x:Name="RootGrid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Transform"
+                                                   Storyboard.TargetProperty="ScaleX">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="1" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Transform"
+                                                   Storyboard.TargetProperty="ScaleY">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="1" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerOver">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Transform"
+                                                   Storyboard.TargetProperty="ScaleX">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="1.1" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Transform"
+                                                   Storyboard.TargetProperty="ScaleY">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="1.1" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Transform"
+                                                   Storyboard.TargetProperty="ScaleX">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="0.8" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Transform"
+                                                   Storyboard.TargetProperty="ScaleY">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="0.8" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <PointerDownThemeAnimation Storyboard.TargetName="RootGrid" />
+                                        </Storyboard>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <ContentPresenter x:Name="ContentPresenter" Content="{TemplateBinding Content}">
+                            <ContentPresenter.RenderTransform>
+                                <CompositeTransform x:Name="Transform" ></CompositeTransform>
+                            </ContentPresenter.RenderTransform>
+                        </ContentPresenter>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
